[gd_scene load_steps=12 format=3 uid="uid://descg61qfdqeq"]

[ext_resource type="Script" path="res://Pet/Pet.gd" id="1"]
[ext_resource type="PackedScene" path="res://Portray/Rectangle.tscn" id="2"]
[ext_resource type="Script" path="res://Pet/Menus.gd" id="3"]
[ext_resource type="Script" path="res://Pet/Notes.gd" id="4"]
[ext_resource type="Script" path="res://Pet/Shortcuts.gd" id="5"]
[ext_resource type="Theme" uid="uid://cbnpu7ypf1alf" path="res://Pet/PetTheme.tres" id="6"]
[ext_resource type="PackedScene" path="res://Pet/popupOpener/popupOpener.tscn" id="7"]
[ext_resource type="Script" path="res://Pet/Calculator.gd" id="8"]
[ext_resource type="Script" path="res://Pet/windows.gd" id="9"]
[ext_resource type="PackedScene" path="res://Pet/minigames/balloonPop/balloonPop.tscn" id="10"]

[sub_resource type="GDScript" id="1"]
script/source = "extends Button


func _on_nextScreenbtn_pressed():
	DisplayServer.window_set_current_screen(DisplayServer.window_get_current_screen())
	DisplayServer.window_set_size(DisplayServer.screen_get_size(DisplayServer.window_get_current_screen()))
"

[node name="Pet" type="Node2D"]
script = ExtResource("1")

[node name="PetVisuals" parent="." instance=ExtResource("2")]

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="windows" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("9")

[node name="Notes" type="Popup" parent="windows" groups=["Cutout"]]

[node name="Margin" type="MarginContainer" parent="windows/Notes"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Notes" type="TextEdit" parent="windows/Notes/Margin"]
layout_mode = 2
script = ExtResource("4")

[node name="saveTimer" type="Timer" parent="windows/Notes/Margin/Notes"]
wait_time = 0.5
one_shot = true

[node name="Shortcuts" type="Popup" parent="windows" groups=["Cutout"]]

[node name="Margin" type="MarginContainer" parent="windows/Shortcuts"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Shortcuts" type="VBoxContainer" parent="windows/Shortcuts/Margin"]
layout_mode = 2
script = ExtResource("5")

[node name="Configs" type="HBoxContainer" parent="windows/Shortcuts/Margin/Shortcuts"]
layout_mode = 2

[node name="Configure" type="Button" parent="windows/Shortcuts/Margin/Shortcuts/Configs"]
layout_mode = 2
size_flags_vertical = 4
text = "Configure"

[node name="add" type="Button" parent="windows/Shortcuts/Margin/Shortcuts/Configs"]
visible = false
layout_mode = 2
size_flags_vertical = 4
text = "add"

[node name="remove" type="CheckBox" parent="windows/Shortcuts/Margin/Shortcuts/Configs"]
visible = false
layout_mode = 2
size_flags_vertical = 4
text = "remove"

[node name="Scroll" type="ScrollContainer" parent="windows/Shortcuts/Margin/Shortcuts"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="list" type="VBoxContainer" parent="windows/Shortcuts/Margin/Shortcuts/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FileDialog" type="FileDialog" parent="windows/Shortcuts" groups=["Cutout"]]
theme = ExtResource("6")
access = 2
filters = PackedStringArray("*.exe")
show_hidden_files = true

[node name="Calculator" type="Popup" parent="windows" groups=["Cutout"]]

[node name="Margin" type="MarginContainer" parent="windows/Calculator"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Box" type="VBoxContainer" parent="windows/Calculator/Margin"]
layout_mode = 2
script = ExtResource("8")

[node name="LineEdit" type="LineEdit" parent="windows/Calculator/Margin/Box"]
layout_mode = 2
clear_button_enabled = true
caret_blink = true

[node name="Grid" type="GridContainer" parent="windows/Calculator/Margin/Box"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="backbtn" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "<"

[node name="Button2" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "("

[node name="Button3" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = ")"

[node name="Button4" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "/"

[node name="Button5" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Button6" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Button7" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="Button8" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "*"

[node name="Button9" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Button10" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Button11" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Button12" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-"

[node name="Button13" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Button14" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Button15" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button16" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[node name="clearbtn" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "c"

[node name="Button18" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="Button19" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "."

[node name="Equals" type="Button" parent="windows/Calculator/Margin/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "="

[node name="MinigameList" type="Popup" parent="windows" groups=["Cutout"]]

[node name="List" type="VBoxContainer" parent="windows/MinigameList"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="BalloonPop" parent="windows/MinigameList/List" instance=ExtResource("7")]
layout_mode = 2
text = "BalloonPOP"
hide_again = false
popup_path = NodePath("../../../BalloonGame")

[node name="BalloonGame" type="Popup" parent="windows" groups=["Cutout"]]

[node name="balloonPop" parent="windows/BalloonGame" instance=ExtResource("10")]
anchors_preset = 15

[node name="Buttons" type="VBoxContainer" parent="." groups=["Cutout"]]
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 0
theme = ExtResource("6")
alignment = 1
script = ExtResource("3")

[node name="Notesbtn" parent="Buttons" instance=ExtResource("7")]
layout_mode = 2
text = "Notes"
popup_path = NodePath("../../windows/Notes")

[node name="shortcutbtn" parent="Buttons" instance=ExtResource("7")]
layout_mode = 2
text = "Shortcuts"
popup_path = NodePath("../../windows/Shortcuts")

[node name="calculatorbtn" parent="Buttons" instance=ExtResource("7")]
layout_mode = 2
text = "Calculator"
popup_path = NodePath("../../windows/Calculator")

[node name="goAway" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Go Away"

[node name="follow" type="Button" parent="Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "Follow Me"

[node name="minigame" parent="Buttons" instance=ExtResource("7")]
layout_mode = 2
text = "Minigames"
popup_path = NodePath("../../windows/MinigameList")

[node name="nextScreenbtn" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Next Screen"
script = SubResource("1")

[node name="ignore_mouse_timer" type="Timer" parent="Buttons"]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="choose_pos"]
[connection signal="text_changed" from="windows/Notes/Margin/Notes" to="windows/Notes/Margin/Notes" method="_on_Notes_text_changed"]
[connection signal="timeout" from="windows/Notes/Margin/Notes/saveTimer" to="windows/Notes/Margin/Notes" method="_on_saveTimer_timeout"]
[connection signal="pressed" from="windows/Shortcuts/Margin/Shortcuts/Configs/Configure" to="windows/Shortcuts/Margin/Shortcuts" method="_on_Configure_pressed"]
[connection signal="pressed" from="windows/Shortcuts/Margin/Shortcuts/Configs/add" to="windows/Shortcuts/Margin/Shortcuts" method="_on_add_pressed"]
[connection signal="file_selected" from="windows/Shortcuts/FileDialog" to="windows/Shortcuts/Margin/Shortcuts" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="windows/Calculator/Margin/Box/Grid/backbtn" to="windows/Calculator/Margin/Box" method="_on_backbtn_pressed"]
[connection signal="pressed" from="windows/Calculator/Margin/Box/Grid/clearbtn" to="windows/Calculator/Margin/Box" method="_on_clearbtn_pressed"]
[connection signal="pressed" from="windows/Calculator/Margin/Box/Grid/Equals" to="windows/Calculator/Margin/Box" method="_on_Equals_pressed"]
[connection signal="mouse_entered" from="Buttons" to="Buttons" method="set" binds= ["mouse_inside", true]]
[connection signal="mouse_exited" from="Buttons" to="Buttons" method="_on_Buttons_mouse_exited"]
[connection signal="pressed" from="Buttons/goAway" to="Buttons" method="_on_goAway_pressed"]
[connection signal="toggled" from="Buttons/follow" to="Buttons" method="_on_follow_toggled"]
[connection signal="pressed" from="Buttons/nextScreenbtn" to="Buttons/nextScreenbtn" method="_on_nextScreenbtn_pressed"]
